--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -40,7 +40,7 @@
                 <label  for="phonennumber">Phonenumber:</label>
             </td>
             <td>
-                <input type="text" name="phonenumber" required placeholder="Phonenumber...">
+                <input type="text" name="phonenumber" id="phoneNumber" required placeholder="Phonenumber...">
             </td>
         </tr>
         <tr>
@@ -60,13 +60,13 @@
 <h1 id="warning" style="display: none; font-size: 15px;"></h1>
 <footer>
     <script>
+
+        // Code below is for verifying personal number.
         
         let ssNrInput = document.getElementById("ssNr");
         ssNrInput.addEventListener('change', getSsNr);
         let warningMessage = document.getElementById("warning");
-        //submitBtn = document.getElementById("submitBtn");
-        //submitBtn.addEventListener("submit", return checkSubmit);
-        let string = "HELLO";
+
         let ssNr = 0;
         let submitOk = false;
         let dateOk = true;
@@ -104,14 +104,14 @@
             separateNums();
 
             sum = numbers[0] + 
-                      numbers[1] + 
-                      numbers[2] + 
-                      numbers[3] + 
-                      numbers[4] + 
-                      numbers[5] + 
-                      numbers[6] + 
-                      numbers[7] + 
-                      numbers[8];
+                  numbers[1] + 
+                  numbers[2] + 
+                  numbers[3] + 
+                  numbers[4] + 
+                  numbers[5] + 
+                  numbers[6] + 
+                  numbers[7] + 
+                  numbers[8];
 
             roundUp = Math.ceil((sum+1)/10)*10;
         }
@@ -128,7 +128,8 @@
         function validateDate() {
             function y2k(number) { 
                 return (number < 1000) ? number + 1900 : number; 
-        }
+            }
+
             yymmdd = ssNr.substring(0, 6);
 
             year = yymmdd.substring(0, 2) - 0;
@@ -151,9 +152,33 @@
             return dateOk;
         }
 
-        function validateSsNr() {
+        // Code below is for verifying phonenumber.
+
+        let phoneNumberInput = document.getElementById("phoneNumber");
+        phoneNumberInput.addEventListener('change', getPhoneNumber);
+
+        let phoneNumber = 0;
+        let phoneOk = true;
+
+        function getPhoneNumber() {
+            phoneNumber = this.value;
+        }
+
+        function validatePhone() {
+            if (!phoneNumber.match(/^([0])([0-9]{9})$/)) {
+                phoneOk = false;
+            } else {
+                phoneOk = true;
+            }
+            return phoneOk;
+        }
+
+        // function below is for verifying form before it submits.
+
+        function validateForm() {
             validateDate();
             formatSsNr();
+            validatePhone();
             if (!ssNr.match(/^([0-9]){2}([0-1])([0-9])([0-9]{2})([0-9]{4})$/)) {
                 submitOk = false;
                 warning.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
@@ -163,25 +188,23 @@
             } else if (roundUp - sum != numbers[9]) {
                 submitOk = false;
                 warning.innerHTML = "Seems like this is not a valid personal number. Please try again.";
+            } else if (phoneOk == false) {
+                submitOk = false;
+                warning.innerHTML = "Seems like this is not a valid phonenumber. Please try again.";
             } else {
                 submitOk = true;
             }
         }
 
-      
-           
-
         function checkSubmit() {
-            validateSsNr();
-            if (submitOk == true && dateOk == true) {
+            validateForm();
+            if (submitOk == true) {
                 return true;
             } else {
                 warning.style.display = "block";
                 return false;
             }
         }
-        
-
     </script>
 </footer>
 {% endblock %}
