--- a/views/customers.twig
+++ b/views/customers.twig
@@ -1,5 +1,5 @@
 {% block customers %}
-<table border="1px solid red">
+<table border="1px solid red" style="width: 80%;">
     <th colspan="7"><h1>Customers</h1></th>
     <tr>
         <td><b>Personal Number</b></td>
@@ -16,16 +16,29 @@
         <td>{{customer.adress}}</td>
         <td>{{customer.postalAdress}}</td>
         <td>{{customer.phonenumber}}</td>
-        <td>
-            <form action="/editCustomer/{{customer.ssNr}}/{{customer.name}}/{{customer.adress}}/{{customer.postalAdress}}/{{customer.phonenumber}}" method="POST">
-                <input type="submit" value="Edit">
-            </form>
-        </td>
-        <td>
-            <form action="/removeCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST" onsubmit="return confirm('Are you sure you want to remove customer {{customer.name}}?')">
-                <input type="submit" value="Remove">
-            </form>
-        </td>
+        {% if customer.numberOfCars == 0 %}
+         <td>
+             <form action="/editCustomer/{{customer.ssNr}}/{{customer.name}}/{{customer.adress}}/{{customer.postalAdress}}/{{customer.phonenumber}}" method="POST">
+                 <input type="submit" value="Edit" style="width: 100%;">
+             </form>
+         </td>
+         <td>
+             <form action="/removeCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST" onsubmit="return confirm('Are you sure you want to remove customer {{customer.name}}?')">
+                 <input type="submit" value="Remove" style="width: 100%;">
+             </form>
+         </td>
+         {% else %}
+          <td>
+             <form action="/editCustomer/{{customer.ssNr}}/{{customer.name}}/{{customer.adress}}/{{customer.postalAdress}}/{{customer.phonenumber}}" method="POST">
+                 <input type="submit" value="Edit" style="width: 100%; color: white;" disabled>
+             </form>
+         </td>
+         <td>
+             <form action="/removeCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST" onsubmit="return confirm('Are you sure you want to remove customer {{customer.name}}?')">
+                 <input type="submit" value="Remove" style="width: 100%; color: white;" disabled>
+             </form>
+         </td>
+         {% endif %}
     </tr>
     {% endfor %}
     <tr>
