--- a/views/addCar.twig
+++ b/views/addCar.twig
@@ -1,13 +1,13 @@
 {% block addCar %}
 <table border="1">
     <th colspan="2">Add Car</th>
-    <form action="/carAdded" method="POST">
+    <form action="/carAdded" method="POST" onsubmit="return checkSubmit();">
         <tr>
             <td>
                 <label for="regNr">Reg Number:</label>
             </td>
             <td>
-                <input type="text" name="regNr" placeholder="RegNr..." required>
+                <input type="text" name="regNr" id="regNr" placeholder="RegNr..." required style="text-transform: uppercase;">
             </td>
         </tr>
         <tr>
@@ -16,6 +16,7 @@
             </td>
             <td>
                 <select name="make" required style="width: 100%;">
+                    <option disabled selected hidden>- Select a make -</option>
                     {% for make in makes %}
                      <option>{{make.getMake}}</option>
                     {% endfor %}
@@ -28,6 +29,7 @@
             </td>
             <td>
                 <select name="color" required style="width: 100%;">
+                    <option disabled selected hidden>- Select a color -</option>
                     {% for color in colors %}
                      <option>{{color.getColor}}</option>
                     {% endfor %}
@@ -47,7 +49,7 @@
                 <label  for="price">Price:</label >
             </td>
             <td>
-                <input type="text" name="price" required placeholder="Price...">
+                <input type="number" name="price" required placeholder="Price..." step=".01">
             </td>
         </tr>
         <tr>
@@ -64,4 +66,38 @@
             </td>
         </tr>
 </table>
+<h1 id="warning" style="display: none; font-size: 15px;"></h1>
+<footer>
+    <script>
+        let regNrInput = document.getElementById("regNr");
+        regNrInput.addEventListener('change', getRegNr);
+        let warningMessage = document.getElementById("warning");
+        let regNr = 0;
+        let submitOk = true;
+
+        function getRegNr() {
+            regNr = this.value;
+        }
+
+        function validateRegNr() {
+            if (!regNr.match(/^([a-zA-Z]{3})([0-9]{2})([a-zA-Z0-9])$/)) {
+                submitOk = false;
+                warningMessage.innerHTML = "Wrong format on registration number. Should be: ABC123 or ABC12D.";
+            } else {
+                submitOk = true;
+            }
+            return submitOk;
+        }
+
+        function checkSubmit() {
+            validateRegNr();
+            if (submitOk == true) {
+                return true;
+            } else {
+                warningMessage.style.display = "block";
+                return false;
+            }
+        }
+    </script>
+</footer>
 {% endblock %}
