--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -181,16 +181,16 @@
             validatePhone();
             if (!ssNr.match(/^([0-9]){2}([0-1])([0-9])([0-9]{2})([0-9]{4})$/)) {
                 submitOk = false;
-                warning.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
+                warningMessage.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
             } else if (dateOk == false) {
                 submitOk = false;
-                warning.innerHTML = "Seems like this is not a valid date. Please try again."; 
+                warningMessage.innerHTML = "Seems like this is not a valid date. Please try again."; 
             } else if (roundUp - sum != numbers[9]) {
                 submitOk = false;
-                warning.innerHTML = "Seems like this is not a valid personal number. Please try again.";
+                warningMessage.innerHTML = "Seems like this is not a valid personal number. Please try again.";
             } else if (phoneOk == false) {
                 submitOk = false;
-                warning.innerHTML = "Seems like this is not a valid phonenumber. Please try again.";
+                warningMessage.innerHTML = "Seems like this is not a valid phonenumber. Please try again.";
             } else {
                 submitOk = true;
             }
@@ -201,7 +201,7 @@
             if (submitOk == true) {
                 return true;
             } else {
-                warning.style.display = "block";
+                warningMessage.style.display = "block";
                 return false;
             }
         }
