--- a/views/editCar.twig
+++ b/views/editCar.twig
@@ -16,7 +16,7 @@
             </td>
             <td>
                 <select name="make" required style="width: 100%;">
-                    <option>{{make}}</option>
+                    <option disabled selected hidden>{{make}}</option>
                     {% for make in makes %}
                      <option>{{make.getMake}}</option>
                     {% endfor %}
@@ -29,7 +29,7 @@
             </td>
             <td>
                 <select name="color" required style="width: 100%;">
-                    <option>{{color}}</option>
+                    <option disabled selected hidden>{{color}}</option>
                     {% for color in colors %}
                      <option>{{color.getColor}}</option>
                     {% endfor %}
