--- a/views/checkIn.twig
+++ b/views/checkIn.twig
@@ -8,7 +8,7 @@
             </td>
             <td>
                 <select name="car" required style="width: 100%;">
-                    <option>--Select a car--</option>
+                    <option disabled selected hidden>--Select a car--</option>
                     {% for car in cars %}
                      <option>{{car.regNr}} {{car.make}}</option>
                     {% endfor %}
