Fix so every started 24h counts as a day on the price and days column in history table.

--- a/views/addCar.twig
+++ b/views/addCar.twig
@@ -16,7 +16,7 @@
             </td>
             <td>
                 <select name="make" required style="width: 100%;">
-                    <option disabled selected hidden>- Select a make -</option>
+                    <option disabled hidden selected>- Select a make -</option>
                     {% for make in makes %}
                      <option>{{make.getMake}}</option>
                     {% endfor %}
