--- a/views/cars.twig
+++ b/views/cars.twig
@@ -1,5 +1,5 @@
 {% block cars %}
-    <table border="1px solid red">
+    <table border="1px solid red" style="width: 80%;">
     <th colspan="9"><h1>Cars</h1></th>
     <tr>
         <td><b>Reg Number</b></td>
@@ -27,23 +27,23 @@
         {% if car.ssNr == 0 %}
             <td>
                 <form action="/editCar/{{car.regNr}}/{{car.make}}/{{car.color}}/{{car.year}}/{{car.price}}" method="POST">
-                    <input type="submit" value="Edit">
+                    <input type="submit" value="Edit" style="width: 100%;">
                 </form>
             </td>
             <td>
                 <form action="/removeCar/{{car.regNr}}/{{car.make}}" method="POST" onsubmit="return confirm('Are you sure you want to remove {{car.make}} with regNr: {{car.regNr}}?')">
-                    <input type="submit" value="Remove">
+                    <input type="submit" value="Remove" style="width: 100%;">
                 </form>
             </td>
         {% else %}
             <td>
                 <form action="/editCar/{{car.regNr}}/{{car.make}}/{{car.color}}/{{car.year}}/{{car.price}}" method="POST">
-                    <input type="submit" value="Edit" disabled style="color: white;">
+                    <input type="submit" value="Edit" disabled style="color: white; width: 100%;">
                 </form>
             </td>
             <td>
                 <form action="/removeCar/{{car.regNr}}/{{car.make}}" method="POST" onsubmit="return confirm('Are you sure you want to remove {{car.make}} with regNr: {{car.regNr}}?')">
-                    <input type="submit" value="Remove" disabled style="color: white;">
+                    <input type="submit" value="Remove" disabled style="color: white; width: 100%;">
                 </form>
             </td>
         {% endif %}
