--- a/views/editCustomer.twig
+++ b/views/editCustomer.twig
@@ -15,7 +15,7 @@
                 <label for="name">Name:</label>
             </td>
             <td>
-                <input type="text" name="name" placeholder="Name..." value="{{name}}">
+                <input type="text" name="name" placeholder="Name..." value="{{name}}" required>
             </td>
         </tr>
         <tr>
@@ -23,7 +23,7 @@
                 <label for="address">Adress:</label>
             </td>
             <td>
-                <input type="text" name="adress" placeholder="Adress..." value="{{adress}}">
+                <input type="text" name="adress" placeholder="Adress..." value="{{adress}}" required>
             </td>
             </td>
         </tr>
@@ -32,7 +32,7 @@
                 <label  for="postalAdress">Postal Adress:</label >
             </td>
             <td>
-                <input type="text" name="postalAdress" required placeholder="Postal adress..." value="{{postalAdress}}">
+                <input type="text" name="postalAdress" required placeholder="Postal adress..." value="{{postalAdress}}" required>
             </td>
         </tr>
         <tr>
@@ -40,7 +40,7 @@
                 <label  for="phonennumber">Phonenumber:</label >
             </td>
             <td>
-                <input type="text" name="phonenumber" id="phoneNumber" required placeholder="Phonenumber..." value="{{phonenumber}}">
+                <input type="text" name="phonenumber" id="phoneNumber" required placeholder="Phonenumber..." value="{{phonenumber}}" required>
             </td>
         </tr>
         <tr>
