--- a/views/addCar.twig
+++ b/views/addCar.twig
@@ -69,16 +69,23 @@
 <h1 id="warning" style="display: none; font-size: 15px;"></h1>
 <footer>
     <script>
+        // Code below is for validating registration number on the new car.
+
+        // Defines inputfield of regNr.
         let regNrInput = document.getElementById("regNr");
+        // Add eventlistener to the inputfield that listens when value changes.
         regNrInput.addEventListener('change', getRegNr);
+        // Defines were the h1 for the warning message if incorrect regNr is.
         let warningMessage = document.getElementById("warning");
         let regNr = 0;
         let submitOk = true;
 
+        // Functions that gets the regNr from inputfield.
         function getRegNr() {
             regNr = this.value;
         }
 
+        // Function that checks if regNr is correct by regEx expression. If false changes warning message to "Wrong....".
         function validateRegNr() {
             if (!regNr.match(/^([a-zA-Z]{3})([0-9]{2})([a-zA-Z0-9])$/)) {
                 submitOk = false;
@@ -89,6 +96,8 @@
             return submitOk;
         }
 
+        // Function that gets calles when user submits form and if regNr is incorrect hinders form from being submitted.
+        // Also displays warning message.
         function checkSubmit() {
             validateRegNr();
             if (submitOk == true) {
