--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -63,8 +63,11 @@
 
         // Code below is for verifying personal number.
         
+        // Defines input field for personal number.
         let ssNrInput = document.getElementById("ssNr");
+        // Adds eventlistener to input field that listens when value is changed.
         ssNrInput.addEventListener('change', getSsNr);
+        // Defines where the H1 for the warning message is.
         let warningMessage = document.getElementById("warning");
 
         let ssNr = 0;
@@ -75,12 +78,15 @@
         let roundUp = 0;
         let yymmdd = '';
 
+        // Function that gets personal number and then splits it up to array(each number is an index).
         function getSsNr() {
             ssNr = this.value;
             numbers = ssNr.split("");
         }
 
+        // Function for formating and defining all different bits of it we need to validate.
         function formatSsNr() {
+            // Reformats each number in personal number to an int and then take every other one times 2.
             numbers[0] = 2 * parseInt(numbers[0], 10);
             numbers[1] = 1 * parseInt(numbers[1], 10);
             numbers[2] = 2 * parseInt(numbers[2], 10);
@@ -92,6 +98,7 @@
             numbers[8] = 2 * parseInt(numbers[8], 10);
             numbers[9] = parseInt(numbers[9], 10);
 
+            // Checks if any number is now over 9, if so splits it up and add the two numbers together.
             function separateNums() {
                 for (let i = 0; i < numbers.length; i++) {
                     if (numbers[i].toString(10).split("").length > 1) {
@@ -103,6 +110,7 @@
 
             separateNums();
 
+            // Adds all the numbers together to get the sum of them.
             sum = numbers[0] + 
                   numbers[1] + 
                   numbers[2] + 
@@ -113,37 +121,35 @@
                   numbers[7] + 
                   numbers[8];
 
+            // Rounds the sum up.
             roundUp = Math.ceil((sum+1)/10)*10;
         }
 
-        function separateNums() {
-            for (let i = 0; i < numbers.length; i++) {
-                if (numbers[i].toString(10).split("").length > 1) {
-                    number = numbers[i].toString(10).split("");
-                    numbers[i] = parseInt(number[0], 10) + parseInt(number[1], 10);
-                }
-            }
-        }
-
+        // Function for validating the date.
         function validateDate() {
             function y2k(number) { 
                 return (number < 1000) ? number + 1900 : number; 
             }
 
+            // Defines that the date is the first 6 characters in the personal number.
             yymmdd = ssNr.substring(0, 6);
 
+            // Defines the year, month and day.
             year = yymmdd.substring(0, 2) - 0;
             month = yymmdd.substring(2, 4) - 1;
             day = parseInt(yymmdd.substring(4, 6), 10);
 
+            // Changes all years that is under 70 to ex. 2067 and all above 70 to ex 1989 since JS can't create dates before 1970.
             if (year < 70) {
                 year += 2000;
             } else {
                 year += 1900;
             }
 
+            // Creates a Date object with the year, month and day defined above.
             let testDate = new Date(year, month, day);
 
+            // Checks if the Date objects year, month and day is the same as we defined them above.
             if (y2k(testDate.getYear() == year) && (testDate.getMonth() == month) && (testDate.getDate() == day)) {
                 dateOk = true;
             } else {
@@ -153,17 +159,21 @@
         }
 
         // Code below is for verifying phonenumber.
-
+        
+        // Defines were the input fiels is.
         let phoneNumberInput = document.getElementById("phoneNumber");
+        // Adds eventlistener to that field that listens when value is changed.
         phoneNumberInput.addEventListener('change', getPhoneNumber);
 
         let phoneNumber = 0;
         let phoneOk = true;
 
+        // Gets the value of the input field.
         function getPhoneNumber() {
             phoneNumber = this.value;
         }
-
+        
+        // Checks if phonenumber starts with 0 and is 10 characters through regEx.
         function validatePhone() {
             if (!phoneNumber.match(/^([0])([0-9]{9})$/)) {
                 phoneOk = false;
@@ -174,11 +184,11 @@
         }
 
         // function below is for verifying form before it submits.
-
         function validateForm() {
             validateDate();
             formatSsNr();
             validatePhone();
+            // Checks if personal number is correct length, date, and controllnumber and also checks if phonenumber validation checked out as true.
             if (!ssNr.match(/^([0-9]){2}([0-1])([0-9])([0-9]{2})([0-9]{4})$/)) {
                 submitOk = false;
                 warningMessage.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
@@ -196,6 +206,7 @@
             }
         }
 
+        // Function for checking if form is allowed to submit or not and also displays warning message if not correct.
         function checkSubmit() {
             validateForm();
             if (submitOk == true) {
