--- a/views/editCustomer.twig
+++ b/views/editCustomer.twig
@@ -60,17 +60,22 @@
 <h1 id="warning" style="display: none; font-size: 15px;"></h1>
 <footer>
     <script>
+        // Defines were the input fiels is.
         let phoneNumberInput = document.getElementById("phoneNumber");
+        // Adds eventlistener to that field that listens when value is changed.
         phoneNumberInput.addEventListener('change', getPhoneNumber);
+        // Defines where the H1 for the warning message is.
         let warningMessage = document.getElementById("warning");
 
         let phoneNumber = 0;
         let phoneOk = true;
 
+        // Gets the value of the input field.
         function getPhoneNumber() {
             phoneNumber = this.value;
         }
 
+        // Checks if phonenumber starts with 0 and is 10 characters through regEx.
         function validatePhone() {
             if (!phoneNumber.match(/^([0])([0-9]{9})$/)) {
                 phoneOk = false;
@@ -81,6 +86,7 @@
             return phoneOk;
         }
 
+        // Function for checking if form is allowed to submit or not and also displays warning message if not correct.
         function checkSubmit() {
             validatePhone();
             if (phoneOk == true) {
