Fix so customer/car gets removed from history when removed but not cost.

--- a/views/editCar.twig
+++ b/views/editCar.twig
@@ -49,7 +49,7 @@
                 <label  for="price">Price:</label >
             </td>
             <td>
-                <input type="number" name="price" required placeholder="price..." value="{{price}}" step=".01">
+                <input type="number" name="price" required placeholder="price..." value="{{price}}" step=".01" min="1">
             </td>
         </tr>
         <tr>
